# bitvector-mk

./: .envrc  .gitmodules  Algebra.ml  BitvectorMK.opam  EvalPh.ml  EvalPh0.ml  Makefile  README.md  Types.ml  bitvector-mk.opam  dune  dune-project  main.ml  mytester.ml  opam  ph_test.ml  s.ml  synth.ml
.github/workflows/: master.yml
boolector/: boolector_ml.ml  dune
demo/: arith.ml  arith2.ml  arithOleg.ml  arith_demo.ml  bv.ml  bv.mli  bv_demo.ml  d.ml  dune
demo_smt/: 1.sexp  2.smt2  2.z3.smt2  3.z3.smt2  aaa.smt2  dune  ex3.t  ex4.t  overflow.smt  power.smt2  power2.smt2
pp_ppx/: dune
rewriter/: dune
tests/: Test_bv.ml  dune  inhabit.t  inhabit_ph.ml  run_inhabit.ml  run_inhabit2.ml
tests/forward/: dune  test1.ml
tests/synth/: dune  run.t  run2.t  test1.ml  test2.ml  test3.ml  test_ex2.ml  test_ex3.ml
