(env
 (dev
  (flags
   (:standard -warn-error +5-33-27 -w -3-9-27-26-32))))



(library
 (name impl)
 (modules Types EvalPh0 Algebra)
 (flags (-rectypes))
 (libraries OCanren OCanren.tester bv z3)
 (inline_tests)
 (wrapped false)
 (preprocess
  (pps ppx_optcomp OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx GT.syntax.show GT.syntax.fmt GT.syntax.map GT.syntax.foldl GT.syntax.compare ppx_inline_test ppx_fail)))

(executable
 (name ph_test)
 (modules ph_test)
 (flags (-rectypes))
 (libraries impl)
 (preprocess
  (pps ppx_optcomp OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx GT.syntax.show GT.syntax.fmt GT.syntax.map GT.syntax.foldl ppx_fail )))



(executable
 (name main)
 (modules main)
 (flags (:standard -rectypes))
 (libraries OCanren z3 res impl bv mytester)
 (preprocess
  (pps ppx_optcomp OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx GT.syntax.show GT.syntax.fmt GT.syntax.map GT.syntax.foldl ppx_fail )))
