(env
 (dev
  (flags
   (:standard -warn-error +5-33-27 -w -3-9-27-26-32))))

(dirs :standard \ boolector)

(library
 (name impl)
 (modules Types EvalPh0 Algebra)
 (flags
  (:standard -rectypes))
 (libraries OCanren OCanren.tester bv z3)
 (inline_tests)
 (wrapped false)
 (preprocess
  (pps
   ppx_optcomp
   ppx_here
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   GT.ppx_all
   ppx_inline_test
   ;
   )))

(executable
 (name ph_test)
 (modules ph_test)
 (flags
  (:standard -rectypes))
 (libraries impl)
 (preprocess
  (pps
   ppx_optcomp
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   OCanren-ppx.ppx_distrib
   GT.ppx_all
   ppx_fail)))

(executable
 (name main)
 (public_name main)
 (package bitvector-mk)
 (modules main)
 (flags
  (:standard -rectypes))
 (libraries OCanren z3 res impl bv mytester)
 (preprocess
  (pps
   ppx_optcomp
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx_all
   ;
   )))

(library
 (name mytester)
 (modules mytester)
 (preprocess
  (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh ppx_expect))
 (flags
  (:standard -rectypes))
 (inline_tests)
 (libraries mtime.clock.os OCanren))
