(env
 (dev
  (flags
   (:standard -warn-error +5-33-27 -w -3-9-27-26-32))))

(dirs :standard \ boolector)

(library
 (name impl)
 (modules Types EvalPh0 Algebra)
 (flags
  (:standard -rectypes))
 (libraries OCanren OCanren.tester bv z3)
 (inline_tests)
 (wrapped false)
 (preprocess
  (pps
   ppx_expect
   ppx_inline_test
   ppx_optcomp
   ppx_here
   ppx_fail
   OCanren-ppx.ppx_distrib
   OCanren-ppx.ppx_tester
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx_all)))

(executable
 (name ph_test)
 (modules ph_test)
 (flags
  (:standard -rectypes))
 (libraries impl)
 (preprocess
  (pps
   ppx_expect
   ppx_inline_test
   ppx_optcomp
   ppx_here
   ppx_fail
   OCanren-ppx.ppx_tester
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx_all)))

(library
 (name synth)
 ; (package bitvector-mk)
 (modules synth)
 (wrapped false)
 (flags
  (:standard -rectypes))
 (libraries OCanren z3 res impl bv mytester)
 (preprocess
  (pps
   ppx_expect
   ppx_inline_test
   ppx_optcomp
   ppx_here
   ppx_fail
   OCanren-ppx.ppx_distrib
   OCanren-ppx.ppx_tester
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx_all)))

(library
 (name mytester)
 (modules mytester)
 (flags
  (:standard -rectypes))
 (inline_tests)
 (libraries mtime.clock.os OCanren)
 (preprocess
  (pps
   ppx_expect
   ppx_inline_test
   ppx_optcomp
   ppx_here
   ppx_fail
   OCanren-ppx.ppx_distrib
   OCanren-ppx.ppx_tester
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx_all)))
