(env
 (_
  (flags
   (:standard -short-paths -rectypes -w -3-9-32))))

(library
 (name bv)
 (modules bv)
 (flags
  (:standard -rectypes))
 (libraries OCanren OCanren.tester)
 ;(instrumentation (backend bisect_ppx))
 (inline_tests)
 (preprocess
  (pps
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx_all
   ppx_optcomp
   ppx_inline_test)))

(executable
 (name bv_demo)
 (modules bv_demo)
 (flags
  (:standard -rectypes))
 (libraries OCanren OCanren.tester bv)
 (preprocess
  (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx)))

(library
 (name arithOleg)
 (modules arithOleg)
 (flags
  (:standard -rectypes))
 (libraries OCanren OCanren.tester)
 (preprocess
  (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx)))

(executable
 (name arith_demo)
 (modules arith_demo)
 (flags
  (:standard -rectypes))
 (libraries OCanren OCanren.tester arithOleg)
 (preprocess
  (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx)))

(executable
 (name d)
 (modules d)
 (flags
  (:standard -rectypes))
 (libraries OCanren z3)
 (preprocess
  (pps OCanren-ppx.ppx_repr OCanren-ppx.ppx_fresh GT.ppx)))
