(env
 (_
  (flags
   (:standard -short-paths -rectypes -w -3-9-32))))

(library
 (name bv)
 (modules bv)
 (flags
  (:standard -rectypes))
 (libraries OCanren OCanren.tester)
 ;(instrumentation (backend bisect_ppx))
 (wrapped false)
 (inline_tests)
 (preprocess
  (pps
   ppx_expect
   ppx_inline_test
   ppx_optcomp
   ppx_here
   ppx_fail
   OCanren-ppx.ppx_tester
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx_all)))

(executable
 (name bv_demo)
 (modules bv_demo)
 (flags
  (:standard -rectypes))
 (libraries OCanren OCanren.tester bv)
 (preprocess
  (pps
   ppx_expect
   ppx_inline_test
   ppx_optcomp
   ppx_here
   ppx_fail
   OCanren-ppx.ppx_tester
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx_all)))

(library
 (name arithOleg)
 (modules arithOleg)
 (flags
  (:standard -rectypes))
 (libraries OCanren OCanren.tester)
 (preprocess
  (pps
   ppx_expect
   ppx_inline_test
   ppx_optcomp
   ppx_here
   ppx_fail
   OCanren-ppx.ppx_tester
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx_all)))

(executable
 (name arith_demo)
 (modules arith_demo)
 (flags
  (:standard -rectypes))
 (libraries OCanren OCanren.tester arithOleg)
 (preprocess
  (pps
   ppx_expect
   ppx_inline_test
   ppx_optcomp
   ppx_here
   ppx_fail
   OCanren-ppx.ppx_tester
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx_all)))

(executable
 (name d)
 (modules d)
 (flags
  (:standard -rectypes))
 (libraries OCanren z3)
 (preprocess
  (pps
   ppx_expect
   ppx_inline_test
   ppx_optcomp
   ppx_here
   ppx_fail
   OCanren-ppx.ppx_tester
   OCanren-ppx.ppx_wildcard
   OCanren-ppx.ppx_repr
   OCanren-ppx.ppx_fresh
   GT.ppx_all)))
